2014-11-14 Albert Chu <chu11@llnl.gov>

	* bmc-info/bmc-info.c (display_system_info_common): Fix cut &
	paste error handling bug.

2014-11-07 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/spec/ipmi-sensor-and-event-code-tables-spec.c: Fix
	typo. (Found by Werner Fischer).
	
2014-11-03 Albert Chu <chu11@llnl.gov>

	* configure.ac: Increment libfreeipmi version appropriately.

2014-11-03 Albert Chu <chu11@llnl.gov>

	* Found by Satya Nishtala <satya at drivescale dot com>

	Fix typo throughout with "Tegulu" language, which should be
	"Telugu".  Typo exists in originally FRU specification.
	
2014-10-30 Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-faq.texi: Fix typo and update with examples.  Add
	support updates.
	
2014-10-29  Albert Chu <chu11@llnl.gov>

	* NEWS, configure.ac: Update for release.

	* Tagged Release-1_4_6

2014-10-29 Albert Chu <chu11@llnl.gov>

	Merge branch ddr4

	* libfreeipmi/include/freeipmi/record-format/ipmi-fru-dimmspd-record-format.h,
	libfreeipmi/record-format/ipmi-fru-dimmspd-record-format.c,
	libfreeipmi/include/freeipmi/templates/ipmi-fru-dimmspd-record-format-templates.h:
	Add DDR4 SPD FRU support.

	* libfreeipmi/include/freeipmi/spec/ipmi-jedec-manufacturer-identification-code-spec.h,
	libfreeipmi/spec/ipmi-jedec-manufacturer-identification-code-spec.c,
	libfreeipmi/spec/jedec-raw.txt,
	libfreeipmi/util/ipmi-jedec-manufacturer-identification-code-util.c:
	Update jedec manufacturer listings.

	* libfreeipmi/spec/ipmi-iana-enterprise-numbers-spec.c: Update
	IANA manufacturer listings.

	* ipmi-fru/: Support DDR4 module output.  Add extra output to DDR3 modules.
	
2014-10-22  Albert Chu <chu11@llnl.gov>

	* ipmi-chassis/ipmi-chassis-argp.c: Options now require arguments,
	remove OPTION_ARG_OPTIONAL flag in parsing.

	* ipmi-chassis/: Add comments on legacy options.
	
2014-10-21  Albert Chu <chu11@llnl.gov>

	* ipmi-raw/: Fix corner case with empty lines when inputting
	commands via standard in or --file.
	