@@ -1,5 +1,12 @@
 2014-11-14 Albert Chu <chu11@llnl.gov>
 
+	* libfreeipmi/driver/ipmi-sunbmc-driver.c,
+	libfreeipmi/driver/ipmi-ssif-driver.c,
+	libfreeipmi/driver/ipmi-openipmi-driver.c: Loop on select() call
+	if interrupted by EINTR.  Issue found by Robin Geyer (robin dot geyer at tu-dresden dot de)
+	
+2014-11-14 Albert Chu <chu11@llnl.gov>
+
 	* bmc-info/bmc-info.c (display_system_info_common): Fix cut &
 	paste error handling bug.
 
